--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,15 @@ author: Dev Aggarwal <devpxy@gmail.com>
 homepage: https://github.com/pycampers/flutter_cognito_plugin
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  plugin_scaffold: ^3.0.1
-  logging: ^0.11.4
+  plugin_scaffold:
+    path: ../flutter-plugin-scaffold
+  logging: ^1.0.0
 
 dev_dependencies:
   flutter_test:
